--- a/site/layouts/_default/li.html
+++ b/site/layouts/_default/li.html
@@ -1,4 +1,4 @@
-<a href="{{ .Permalink }}" class="shadow-none">
+<a href="{{ .RelPermalink }}" class="shadow-none">
 	<div class="flex h-64 no-underline w-64 justify-end">
 		{{ if .Params.image }}
 			<div class="h-64 overflow-hidden relative inline-block outline-none border-none shadow-lg hover:shadow-none">
