--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -1,9 +1,13 @@
 {{ define "main" }}
 <div class="flex justify-end" id="list">
   <div class="p-4">
+    {{ if eq .Kind "taxonomy" }}
+      <div class="text-3xl font-normal text-green-brand text-right border-b-4 border-solid border-green-brand">{{ .Title }}</div>
+      <svg class="h-5 green-brand self-end mb-5" height="20" width="20"><circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle></svg>
+    {{ end }}
     <div class="mb-16">
       {{ range first 1 .Pages.ByPublishDate.Reverse }}  
-        <a href="{{ .Permalink }}" class="shadow-none hover:shadow-none">
+        <a href="{{ .RelPermalink }}" class="shadow-none hover:shadow-none">
           {{ partial "text-and-image" (dict "heading" .Title "text" .Description "image" .Params.Image "imageclass" "shadow-lg hover:shadow-none border-r-8 h-64i border-solid border-green-brand" "textclass" "leading-tight mt-1 font-serif text-lg italic" "headingclass" "font-bold leading-none text-5xl font-serif text-brand capitalize") }}
         </a>
       {{ end }}
@@ -22,6 +26,6 @@
       {{ end }}
     </div>
   </div>
-  {{ partial "nav"}}
+  {{ partial "nav" . }}
 </div>
 {{end}}
