--- a/src/css/brand.css
+++ b/src/css/brand.css
@@ -8,8 +8,10 @@ body {
     font-display: fallback;
     -webkit-font-smoothing: antialiased;
 }
-figcaption { @apply .text-xs; @apply .font-serif; @apply .justify-end; @apply .flex; @apply .italic; }
+figcaption { @apply .text-xs; @apply .font-serif; @apply .w-full; @apply .flex-auto; @apply .flex; @apply .italic; }
 figcaption h4 {@apply .mr-2;}
+figure {@apply .flex; @apply .flex-wrap; }
+figure img {@apply .self-center;}
 #post #body p, #update p, #body ul, #post #body ol, .update p { @apply .mb-3; @apply .font-serif; }
 #post h1 {font-size: 3.3rem;}
 #blog #post #body>p:first-of-type:first-letter {
@@ -63,7 +65,7 @@ nav a, nav a:hover {box-shadow: none;}
     @apply .w-auto;
     @apply .min-w-full;
     @apply .min-h-full;
-    max-width: 200%;
+    max-width: 240%;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
