--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -1,7 +1,7 @@
 <section class="p-2 text-image">
 	<container class="flex justify-center">
 		<div class="overflow-hidden">
-			<img src="{{ .image }}" alt="" class="{{ .imageclass }}">
+			<img src="{{ .image }}?nf_resize=fit&w=300" alt="" class="{{ .imageclass }}">
 		</div>
 		<div class="text w-1/2 flex-grow flex-no-shrink ml-4">
 			<h2 class="{{ .headingclass }}">{{.heading}}</h2>
