--- a/site/layouts/partials/image-grid.html
+++ b/site/layouts/partials/image-grid.html
@@ -2,15 +2,15 @@
 
 	<div class="flex flex-wrap mhn1">
 		<div class="w-100 w-50-ns ph1-ns">
-			<img src="{{ .image1.image }}" alt="{{ .image1.alt }}">
+			<img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/v1556313746/{{ .image1.image }}" alt="{{ .image1.alt }}">
 		</div>
 
 		<div class="w-100 w-50-ns ph1-ns">
-			<img src="{{ .image2.image }}" alt="{{ .image2.alt }}">
+			<img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/v1556313746/{{ .image2.image }}" alt="{{ .image2.alt }}">
 		</div>
 
 		<div class="w-100 ph1-ns">
-			<img src="{{ .image3.image }}" alt="{{ .image3.alt }}">
+			<img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/v1556313746/{{ .image3.image }}" alt="{{ .image3.alt }}">
 		</div>
 	</div>
 
