--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,5 +1,5 @@
 <header class="w-full h-screen flex items-center relative overflow-hidden py-3 px-5 border-b-8 border-solid border-green-dark">
-  <img class="absolute l-0 t-0 h-auto" src={{.imageUrl}} />
+  <img class="absolute l-0 t-0 h-auto" src=https://res.cloudinary.com/airjoshb/image/upload/t_post_size/v1556313746/{{.imageUrl}} />
   
   <div class="relative w-full text-right">
     <a href="/" class="w-4 h-4">
