--- a/site/layouts/partials/media-block.html
+++ b/site/layouts/partials/media-block.html
@@ -1,7 +1,7 @@
 <div class="flex-m mhn3-m mb4">
 
   <div class="ph3-m w-50-m">
-    <img src="{{.imageUrl}}" alt="" class="db mb2">
+    <img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/v1556313746/{{.imageUrl}}" alt="" class="db mb2">
   </div>
 
   <div class="ph3-m w-50-m">
