--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -1,7 +1,7 @@
 <section class="p-2 text-image">
 	<container class="flex justify-center">
 		<div class="overflow-hidden">
-			<img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/v1556313746/{{ .image }}?nf_resize=fit&w=300" alt="" class="{{ .imageclass }}">
+			<img src="https://res.cloudinary.com/airjoshb/image/upload/w_350,f_auto/{{ .image }}" alt="" class="{{ .imageclass }}">
 		</div>
 		<div class="text w-1/2 flex-grow flex-no-shrink ml-4">
 			<h2 class="{{ .headingclass }}">{{.heading}}</h2>
