--- a/site/layouts/partials/2-up.html
+++ b/site/layouts/partials/2-up.html
@@ -6,7 +6,7 @@
     <div class="flex-ns mhn2-ns mb3">
       {{ range .products }}
       <div class="ph2-ns w-50-ns">
-        <img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/{{.image}}" alt="" class="center db mb3" style="width: 240px">
+        <img src="https://res.cloudinary.com/airjoshb/image/upload/w_350,f_auto/{{.image}}" alt="" class="center db mb3" style="width: 240px">
         <p>{{.text}}</p>
       </div>
       {{ end }}
