--- a/site/layouts/partials/update.html
+++ b/site/layouts/partials/update.html
@@ -13,7 +13,7 @@
                 <a href="{{ .RelPermalink }}" class=" shadow-none hover:shadow-none hover:text-green-brand">link</a>
             </div>
         <div class="bg-grey-lightest rounded-lg p-4 w-3/4 update text-lg leading-normal text-brand font-serif">
-            {{ if .Params.image }}<img src="https://res.cloudinary.com/airjoshb/image/upload/t_post_size/v1556313746/{{ .Params.image }}" alt="{{ .Title }}" class="w-1/2 ml-2 mb-2 float-right inline" />{{ end }}        
+            {{ if .Params.image }}<img src="https://res.cloudinary.com/airjoshb/image/upload/w_350,f_auto/{{ .Params.image }}" alt="{{ .Title }}" class="w-1/2 ml-2 mb-2 float-right inline" />{{ end }}        
             {{ .Content }}  
         </div>
     </div>
