--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -11,7 +11,7 @@
                 {{ .Params.title }}
             </h1>
             <div class="font-serif font-medium italic border-b-thick border-solid border-grey-lightest text-right text-grey-lightest text-lg pt-5 leading-normal">
-                <p class="mb-0 "><a href="https://twitter.com/airjoshb">Joshua</a> is passionate about making life better. </br><a href="#thoughts">Sign up</a> for thoughts on entrepreneurship, human potential and what he is reading.</p>
+                <p class="mb-0 "><a href="https://twitter.com/airjoshb">Joshua</a> is passionate about making life better. </br><a href="#thoughts">Sign up</a> for thoughts on what he is reading, human performance and entrepreneurship.</p>
             </div>
             <svg class="h-5" height="20" width="20">
                 <circle cx="10" cy="10" r="8" stroke="transparent" fill="white"></circle>
