--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -27,7 +27,7 @@
 	<meta property="og:url" content="{{ .Permalink }}">
 	<meta property="og:site_name" content="{{ .Site.Title }}">
 	{{ if .Params.image }}
-	<meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.image }}">
+	<meta property="og:image" content="https://res.cloudinary.com/airjoshb/image/upload/w_350,f_auto/{{ .Params.image }}">
 	{{ end }}
 	{{ range .AlternativeOutputFormats -}}
 		{{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
