--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -26,7 +26,21 @@
           </div>
         </div>
         <div class="w-3/4 leading-normal text-lg border-l-thick border-solid border-green-brand pl-4" id="body">
+          {{ if $.Page.Params.toc }}
+            {{ $.Page.TableOfContents }}
+          {{ end }}          
           {{ .Content }}
+          {{ with .Resources.ByType "page" }}
+            {{ range . }}
+              <div class="text-brand font-serif my-6">
+                <h3 class="text-2xl leading-none">{{ .Title }}</h3>
+                <div class="italic text-sm">
+                  {{ .Date.Format "Monday, January 2, 2006" }}
+                </div>
+              </div>
+              {{ .Content }}
+            {{ end }}
+          {{ end }}
           <svg class="h-5 float-right green-brand" height="20" width="20">
             <circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle>
           </svg>
