--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -32,13 +32,15 @@
           {{ .Content }}
           {{ with .Resources.ByType "page" }}
             {{ range . }}
-              <div class="text-brand font-serif my-6">
-                <h3 class="text-2xl leading-none">{{ .Title }}</h3>
-                <div class="italic text-sm">
-                  {{ .Date.Format "Monday, January 2, 2006" }}
-                </div>
-              </div>
-              {{ .Content }}
+              <div class="inline-block">
+                <div class="text-brand font-serif my-6">
+                    <h3 class="text-2xl leading-none">{{ .Title }}</h3>
+                    <div class="italic text-sm">
+                      {{ .Date.Format "Monday, January 2, 2006" }}
+                    </div>
+                  </div>
+                  {{ .Content }}
+              </div>  
             {{ end }}
           {{ end }}
           <svg class="h-5 float-right green-brand" height="20" width="20">
