--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -26,13 +26,10 @@
           </div>
         </div>
         <div class="w-3/4 leading-normal text-lg border-l-thick border-solid border-green-brand pl-4" id="body">
-          {{ if $.Page.Params.toc }}
-            {{ $.Page.TableOfContents }}
-          {{ end }}          
           {{ .Content }}
           {{ with .Resources.ByType "page" }}
             {{ range . }}
-              <div class="inline-block">
+              <div class="inline-block" id="{{ .Title }}">
                 <div class="text-brand font-serif my-6">
                     <h3 class="text-2xl leading-none">{{ .Title }}</h3>
                     <div class="italic text-sm">
