--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -18,6 +18,7 @@
                 <use xlink:href="#icons-twitter"></use>
               </svg>
             </a>
+            <a href="https://refind.com?url={{ .Permalink }}" target="_blank" class="inline-block shadow-none align-middle hover:shadow-none"><img src="https://refind.com/img/logo-gray.svg" style="width: 16px; height: 16px;" class="db fill-brand inline" /></a>
           </div>
           <div class="text-right mt-2 border-t-4 pt-2 border-solid border-green-brand">      
             <svg class="h-5 green-brand" height="20" width="20">
