--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -5,6 +5,7 @@
 				<p>Get something in your inbox every week or two with thoughts and books about health, performance and entrepreneurship.</p>
 				<div class="py-2"  id="thoughts">{{ partial "newsletter-form" . }}</div>
 				{{ partial "social-icon" (dict "link" "https://twitter.com/airjoshb" "svg" "icons-twitter") }}	
+				{{ partial "social-icon" (dict "link" "https://refind.com/airjoshb?follow=true" "svg" "https://refind.com/img/logo-gray.svg") }}	
 				<p class="text-center text-lg font-serif py-2">Please reach out by email, josh at gotostepone dot com</p>		
 				<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>	
 			</div>	
