update to essay

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -18,7 +18,7 @@
 
         <div class="border-t-4 border-solid border-brand relative py-1">
             <div class="nav-link">    
-                <a href="#" class="cursor-not-allowed text-brand font-black">Essays</a>
+                <a href="/essay" class="text-brand font-black">Essays</a>
         
             </div>
         </div>
