--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -26,7 +26,7 @@
             </div>
         
             <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative py-1">
-                    <a href="#" class="cursor-not-allowed font-black">Essays</a>
+                    <a href="/essay" class="font-black">Essays</a>
             </div>
         
             <div class="border-t-4 border-solid border-grey-lightest text-right text-grey-lightest relative py-1">
