--- a/site/layouts/essay/single.html
+++ b/site/layouts/essay/single.html
@@ -25,9 +25,20 @@
               <circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle>
             </svg>
           </div>
+          {{ with .Resources.ByType "page" }}
+            <div class="my-4"> 
+              <ol>
+                <h5>Table of Contents</h5>
+                <li>Beginning</li>
+                {{ range . }}
+                 <li><a href="#{{ .File.BaseFileName }}">{{ .Title }}</a></li>
+                {{ end }}
+              </ol>
+            </div>  
+          {{ end }}
         </div>
-        <div class="flex flex-col w-3/4">
-          <div class="bg-white shadow-lg leading-normal text-lg border-l-thick border-solid border-green-brand mb-4 p-5" id="body">
+        <div class="flex flex-col w-full">
+          <div class="bg-white shadow-md leading-normal text-lg border-l-thick border-solid border-green-brand mb-4 p-5" id="body">
             {{ .Content }}
           </div>
           <svg class="h-5 float-right text-right green-brand mb-4" height="20" width="20">
@@ -35,9 +46,9 @@
           </svg>
           {{ with .Resources.ByType "page" }}
             {{ range . }}
-              <div class="bg-white shadow-lg leading-normal text-lg border-l-thick border-solid border-green-brand p-5 mb-4" id="body">
+              <div class="bg-white shadow-md leading-normal text-lg border-l-thick border-solid border-green-brand p-5 mb-4" id={{ .File.BaseFileName }}>
                 <h3 class="text-2xl leading-none">{{ .Title }}</h3>
-                <div class="italic text-sm">
+                <div class="italic text-sm mb-6">
                   {{ .Date.Format "Monday, January 2, 2006" }}
                 </div>
                 {{ .Content }}
