--- a/site/layouts/essay/single.html
+++ b/site/layouts/essay/single.html
@@ -26,7 +26,7 @@
             </svg>
           </div>
           {{ with .Resources.ByType "page" }}
-            <div class="my-4"> 
+            <div class="my-4" id="toc"> 
               <ol>
                 <h5>Table of Contents</h5>
                 <li>Beginning</li>
