--- a/src/css/brand.css
+++ b/src/css/brand.css
@@ -33,8 +33,9 @@ figure img { @apply .w-full;}
     font-weight: bold;
     @apply .font-sans;
 }
-#blog ol { padding-left: 0; list-style-type: upper-roman; list-style-position: inside;}
-#blog ol li {padding: .3rem 0 .3rem;}
+#toc ol { padding-left: 0; list-style-type: upper-roman; list-style-position: inside;}
+#toc ol li {padding: .3rem 0 .3rem;}
+
 header img {  
     -webkit-transform: translate(-10%, -10%);
     transform: translate(-10%, -10%);
