--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -48,7 +48,7 @@
             {{ range . }}
               <div class="bg-white shadow-lg leading-normal text-lg border-l-thick border-solid border-green-brand p-5 mb-4" id={{ .File.BaseFileName }}>
                 <h3 class="text-2xl leading-none">{{ .Title }}</h3>
-                <div class="italic text-sm">
+                <div class="italic text-sm mb-6">
                   {{ .Date.Format "Monday, January 2, 2006" }}
                 </div>
                 {{ .Content }}
