--- a/src/css/brand.css
+++ b/src/css/brand.css
@@ -93,6 +93,25 @@ nav a, nav a:hover {box-shadow: none;}
 svg.green-brand {fill: config("colors.green-brand");}
 code { @apply .text-sm;}
 
+blockquote {
+    margin: 0 0 1.25rem;
+    padding: 0.5625rem 1.25rem 0 1.1875rem;
+    border-left: 1px solid #DDDDDD; }
+    blockquote cite {
+      display: block;
+      font-size: 0.8125rem;
+      color: #555555; }
+      blockquote cite:before {
+        content: "\2014 \0020"; }
+      blockquote cite a,
+      blockquote cite a:visited {
+        color: #555555; }
+  
+  blockquote,
+  blockquote p {
+    line-height: 1.6;
+    color: #6f6f6f;
+ }
 
 @screen sm {}
 
