--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -37,7 +37,7 @@
             </div>  
           {{ end }}
         </div>
-        <div class="flex flex-col w-3/4">
+        <div class="flex flex-col w-full">
           <div class="bg-white shadow-lg leading-normal text-lg border-l-thick border-solid border-green-brand mb-4 p-5" id="body">
             {{ .Content }}
           </div>
