--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -25,7 +25,7 @@
 
         <div class="border-t-4 border-solid border-brand relative py-1">
             <div class="nav-link">    
-                <a href="#about" class="font-black text-brand font-black">About Joshua</a>
+                <a href="/#about" class="font-black text-brand font-black">About Joshua</a>
         
             </div>
         </div>
