--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -1,7 +1,7 @@
 <form name="newsletter" netlify class="my-3">
-  <fieldset class="inline-block" name="newsletter" action="newsletter-subscribe">
-    <input type="email" name="email" placeholder="Your email" class="w-full inline px-4 py-2 rounded">
-    <input type="text" name="fname" placeholder="Your first name" class="w-full inline px-4 py-2 rounded">
+  <fieldset name="newsletter" action="newsletter-subscribe">
+    <input type="email" name="email" placeholder="Your email" class="w-1/2 px-4 py-2 mb-1 rounded">
+    <input type="text" name="fname" placeholder="Your first name" class="w-1/2 px-4 py-2 mb-1 rounded">
 
   </fieldset>
   <button class="bg-transparent hover:bg-brand-light text text-brand-light font-semibold hover:text-brand py-2 px-4 border border-brand-light border-solid hover:border-transparent rounded ml-2" type="submit">Sign Up</button>
