--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -42,4 +42,5 @@
 	gtag('js', new Date());
 	gtag('config', 'UA-41484403-1');
 	</script>
+	<script type="text/javascript" src="http://classic.avantlink.com/affiliate_app_confirm.php?mode=js&authResponse=76bbd066dc996f85bb19415f20e77500c689e7c5"></script>
 </head>
