--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -46,7 +46,7 @@
                   </div>  
                   <div class="w-4/5 pl-4">
                     <h4>Gear ::
-                    <a href="{{ .Params.link }}">{{ .Title }}</a>
+                    <a href="{{ .Params.link }}" target="_blank">{{ .Title }}</a>
                     </h4>
                     <p>{{ .Content }}</p>
                   </div>
