--- a/site/layouts/partials/update.html
+++ b/site/layouts/partials/update.html
@@ -9,12 +9,12 @@
     {{ $.Scratch.Set "lastUpdatesDate" (.Date.Format "2 January 2006") }}
     <div class="flex flex-row flex-no-shrink w-3/4 mb-2 update border-b border-grey pb-2 mb-6">
         <div class="text-brand flex flex-col text-brand text-base font-serif italic text-center">
-            {{ if .Params.image }}<img src="https://res.cloudinary.com/airjoshb/image/upload/w_200,h_200,c_fill,f_auto/{{ .Params.image }}" alt="{{ .Title }}" class="ml-2 mb-2 float-right inline" />{{ end }}        
+            {{ if .Params.image }}<img src="https://res.cloudinary.com/airjoshb/image/upload/w_200,h_200,c_fill/{{ .Params.image }}" alt="{{ .Title }}" class="ml-2 mb-2 float-right inline" />{{ end }}        
             <div>
-                <time>{{ .Date.Format "Monday ... 1pm" }}</time> 
-                ~ 
+                <time>{{ .Date.Format "Monday ... 1pm" }}</time>
+                ~
                 <a href="{{ .RelPermalink }}" class="inline shadow-none hover:shadow-none hover:text-green-brand">link</a>
-                ~  
+                ~
                 <a href="//twitter.com/share?url={{ .Permalink }}&amp;text=I%20just%20saw%20this&amp;via=airjoshb" target="_blank" class="inline-block shadow-none align-middle">
                     <svg width="16px" height="16px" class="db fill-brand inline">
                     <use xlink:href="#icons-twitter"></use>
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="p-4 w-3/4 update text-lg leading-normal text-brand font-serif">
-            {{ .Content }}  
+            {{ .Content }}
         </div>
     </div>
     {{ end }}
