--- a/src/css/brand.css
+++ b/src/css/brand.css
@@ -37,11 +37,11 @@ figure img { @apply .w-full;}
 #toc ol { padding-left: 0; list-style-type: upper-roman; list-style-position: inside;}
 #toc ol li {padding: .3rem 0 .3rem;}
 ul li { @apply mb-4; @apply leading-tight;}
-header img {  
+header img {
     -webkit-transform: translate(-10%, -10%);
     transform: translate(-10%, -10%);
     z-index: 0;
-    max-width: 120%;
+    min-width: 110%;
 }
 .h-64i {@apply .h-64 !important;}
 header .flex * { z-index: 50;}
@@ -106,7 +106,7 @@ blockquote {
       blockquote cite a,
       blockquote cite a:visited {
         color: #555555; }
-  
+
   blockquote,
   blockquote p {
     line-height: 1.6;
@@ -149,9 +149,9 @@ blockquote {
     .home-nav {
         @apply .w-full;
     }
-    .update { 
-        @apply .flex-col; 
-        @apply .w-full; 
+    .update {
+        @apply .flex-col;
+        @apply .w-full;
     }
     .update div { width: 90%; }
     .text-image container .text { @apply .w-full;}
@@ -175,4 +175,3 @@ blockquote {
         float: none;
     }
   }
-  
