--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -2,7 +2,7 @@
   <div class="flex" id="blog">
     <div class="w-3/4 m-auto overflow-hidden px-5 pt-8 pb-4" id="post">
       <div class="mb-8 flex items-end">
-        {{ if .Params.image }}<img src="https://res.cloudinary.com/airjoshb/image/upload/w_600,f_auto/{{ .Params.image }}" alt="{{ .Title }}" class="w-3/5 border-r-8 border-solid border-green-brand" />{{ end }}
+        {{ if .Params.image }}<img src="https://res.cloudinary.com/airjoshb/image/upload/f_auto,w_600/{{ .Params.image }}" alt="{{ .Title }}" class="w-3/5 border-r-8 border-solid border-green-brand" />{{ end }}
         <div class="ml-3">
           <h1 class="font-serif text-brand leading-none mb-0 flex-shrink flex-no-grow">{{.Title}}</h1>
           <h2 class="font-serif text-brand text-lg italic font-hairline">{{ .Description }}</h2></div>
@@ -20,13 +20,13 @@
             </a>
             <a href="https://refind.com?url={{ .Permalink }}" target="_blank" class="inline-block shadow-none align-middle hover:shadow-none"><img src="https://refind.com/img/logo-gray.svg" style="width: 16px; height: 16px;" class="db fill-brand inline" /></a>
           </div>
-          <div class="text-right mt-2 border-t-4 pt-2 border-solid border-green-brand">      
+          <div class="text-right mt-2 border-t-4 pt-2 border-solid border-green-brand">
             <svg class="h-5 green-brand" height="20" width="20">
               <circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle>
             </svg>
           </div>
           {{ with .Resources.ByType "page" }}
-            <div class="my-4" id="toc"> 
+            <div class="my-4" id="toc">
               <ol>
                 <h5>Table of Contents</h5>
                 <li>Beginning</li>
@@ -34,16 +34,16 @@
                  <li><a href="#{{ .File.BaseFileName }}">{{ .Title }}</a></li>
                 {{ end }}
               </ol>
-            </div>  
+            </div>
           {{ end }}
         </div>
         <div class="flex flex-col w-full">
           {{ with .Site.GetPage "gear" }}
-            {{ range $gear, $gear := .Resources.Match (string ($.Params.gear)) }}  
+            {{ range $gear, $gear := .Resources.Match (string ($.Params.gear)) }}
                 <div class="bg-white shadow-lg font-serif text-brand text-lg  mb-4 p-5 flex-row flex">
                   <div class="w-1/5 h-24" >
-                    <img src="{{ .Params.image }}" class="h-24" /> 
-                  </div>  
+                    <img src="{{ .Params.image }}" class="h-24" />
+                  </div>
                   <div class="w-4/5 pl-4">
                     <h4>Gear ::
                     <a href="{{ .Params.link }}" target="_blank">{{ .Title }}</a>
@@ -72,8 +72,8 @@
                 <circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle>
               </svg>
             {{ end }}
-          {{ end }}  
-        </div>        
+          {{ end }}
+        </div>
       </div>
     </div>
     {{ partial "nav" .}}
