--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -1,8 +1,7 @@
 <div class="flex flex-wrap">
   <div class="mb-6">
-  <span class="text-sm font-bold text-grey uppercase">{{ .date.Format "February 2006" }}</span>  
-  <a href="{{ .RelPermalink }}" class="shadow-none font-serif text-3xl capitalize text-brand block">{{.heading}}</a>
+  <span class="text-sm font-bold text-grey uppercase">{{ .date.Format "February 2006" }}</span>
+  <a href="{{ .link }}" class="shadow-none font-serif text-3xl capitalize text-brand block">{{.heading}}</a>
   <p class="font-serif text-lg italic text-brand">{{.text}}</p>
   </div>
 </div>
-
