--- a/site/layouts/partials/image-grid.html
+++ b/site/layouts/partials/image-grid.html
@@ -1,17 +1,12 @@
 <div class="mw7 center ph3 pv4">
 
 	<div class="flex flex-wrap mhn1">
-		<div class="w-100 w-50-ns ph1-ns">
-			<img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/v1556313746/{{ .image1.image }}" alt="{{ .image1.alt }}">
-		</div>
-
-		<div class="w-100 w-50-ns ph1-ns">
-			<img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/v1556313746/{{ .image2.image }}" alt="{{ .image2.alt }}">
-		</div>
-
-		<div class="w-100 ph1-ns">
-			<img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/v1556313746/{{ .image3.image }}" alt="{{ .image3.alt }}">
-		</div>
+		{{ $itemCount := len .items }}
+		{{ range $images, $item := .items }}
+			<div class="ph1-ns">
+				<img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/v1556313746/{{ .item.image }}" alt="{{ .image1.alt }}">
+			</div>
+		{{ end }}
 	</div>
 
 </div>
