--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 		<div class="w-1/2 m-auto">
 			<div class="text-center p-4">{{ partial "icon" (dict "class" "fill-white") }}</div>
 			<div class="text-center font-serif pb-2 text-xl leading-loose">
-				<p>Get something in your inbox every week or two with thoughts and books about health, performance and entrepreneurship.</p>
+				<p>Get a note in your inbox every couple of weeks with Joshua's latest thoughts on Crohn's, mindfulness, entrepreneurship, and more.</p>
 				<div class="py-2"  id="thoughts">{{ partial "newsletter-form" . }}</div>
 				{{ partial "social-icon" (dict "link" "https://twitter.com/airjoshb" "svg" "icons-twitter") }}	
 				{{ partial "social-icon" (dict "link" "https://refind.com/airjoshb?follow=true" "svg" "https://refind.com/img/logo-gray.svg") }}	
