--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -11,7 +11,7 @@
                 {{ .Params.title }}
             </h1>
             <div class="font-serif font-medium italic border-b-thick border-solid border-grey-lightest text-right text-grey-lightest text-lg pt-5 leading-normal">
-                <p class="mb-1 "><a href="https://twitter.com/airjoshb">Joshua</a> is passionate about making life better. He's an autoimmune athlete with Crohn's, a meditator, and co-founder of <a href="http://levered.com">Levered Learning</a>.</a></br><a href="#thoughts">Sign up</a> for thoughts on health, IBD, training, and entrepreneurship.</p>
+                <p class="mb-1 "><a href="https://twitter.com/airjoshb">Joshua</a> is passionate about making life better. </br> He's an autoimmune athlete with Crohn's, a meditator, and co-founder of <a href="http://levered.com">Levered Learning</a>.</a></br><a href="#thoughts">Sign up</a> for thoughts on health, IBD, training, and entrepreneurship.</p>
             </div>
             <svg class="h-5" height="20" width="20">
                 <circle cx="10" cy="10" r="8" stroke="transparent" fill="white"></circle>
@@ -20,6 +20,9 @@
         <nav class="home-nav relative p-3 w-1/3 mt-auto text-grey-lightest text-lg">
             <div class="text-right py-1 text-grey-lightest relative">
                 <a href="#now" class="font-black">Now</a>
+            </div>
+            <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative py-1">
+                <a href="/update" class="font-black">Updates</a>
             </div>
             <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative py-1">
                     <a href="/post" class="font-black">Posts</a>
