--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -37,7 +37,8 @@
 <div class="flex" id="list">
   <div class="p-4">
     <div class="mb-8">
-      {{ range first 3 .Pages.ByPublishDate.Reverse }}
+      <h2 class="font-serif text-5xl text-grey-lightest text-right leading-none">Latest Posts</h2>
+      {{ range first 3 .Pages.ByPublishDate.Reverse (where .Data.Pages "Type" "post") }}
         <a href="{{ .RelPermalink }}" class="shadow-none hover:shadow-none">
           {{ partial "text-and-image" (dict "heading" .Title "text" .Description "image" .Params.Image "imageclass" "shadow-lg hover:shadow-none border-r-8 h-64i border-solid border-green-brand" "textclass" "leading-tight mt-1 font-serif text-lg italic" "headingclass" "font-bold leading-none text-5xl font-serif text-brand capitalize") }}
         </a>
@@ -46,6 +47,7 @@
    </div>
   <div class="p-4">
     <div class="mb-8">
+        <h2 class="font-serif text-5xl text-grey-lightest text-right leading-none">Updates</h2>
         {{ partial "update" . }}
     </div>
   </div>
