--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -38,7 +38,7 @@
   <div class="p-4">
     <div class="mb-8">
       <h2 class="font-serif text-5xl text-grey-lightest text-right leading-none">Latest Posts</h2>
-      {{ range first 3 .Pages.ByPublishDate.Reverse where .Data.Pages "Type" "post" }}
+      {{ range first 3 where .Data.Pages.ByPublishDate.Reverse "Type" "post" }}
         <a href="{{ .RelPermalink }}" class="shadow-none hover:shadow-none">
           {{ partial "text-and-image" (dict "heading" .Title "text" .Description "image" .Params.Image "imageclass" "shadow-lg hover:shadow-none border-r-8 h-64i border-solid border-green-brand" "textclass" "leading-tight mt-1 font-serif text-lg italic" "headingclass" "font-bold leading-none text-5xl font-serif text-brand capitalize") }}
         </a>
