--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -37,17 +37,17 @@
 <div class="flex" id="list">
   <div class="p-4">
     <div class="mb-8">
-      <h2 class="font-serif text-5xl text-grey-lightest text-right leading-none">Latest Posts</h2>
+      <h3 class="font-serif text-5xl text-green-brand leading-none">Latest Posts</h3>
       {{ range first 3 (where .Data.Pages "Type" "post").ByPublishDate.Reverse }}
         <a href="{{ .RelPermalink }}" class="shadow-none hover:shadow-none">
-          {{ partial "text-and-image" (dict "heading" .Title "text" .Description "image" .Date "publishdate" .Params.Image "imageclass" "shadow-lg hover:shadow-none border-r-8 h-64i border-solid border-green-brand" "textclass" "leading-tight mt-1 font-serif text-lg italic" "headingclass" "font-bold leading-none text-5xl font-serif text-brand capitalize") }}
+          {{ partial "text-and-image" (dict "heading" .Title "text" .Description "date" .PublishDate "image" .Params.Image "imageclass" "shadow-lg hover:shadow-none border-r-8 h-64i border-solid border-green-brand" "textclass" "leading-tight mt-1 font-serif text-lg italic" "headingclass" "font-bold leading-none text-5xl font-serif text-brand capitalize") }}
         </a>
       {{ end }}
     </div>
    </div>
   <div class="p-4">
     <div class="mb-8">
-        <h2 class="font-serif text-5xl text-grey-lightest text-right leading-none">Updates</h2>
+        <h3 class="font-serif text-5xl text-green-brand leading-none">Updates</h2>
         {{ partial "update" . }}
     </div>
   </div>
