--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -34,13 +34,13 @@
         </nav>
     </div>
 </header>
-<div class="flex" id="list">
+<div class="flex">
   <div class="p-4">
     <div class="mb-8">
       <h3 class="font-serif text-5xl text-green-brand leading-none">Latest Posts</h3>
       {{ range first 3 (where .Data.Pages "Type" "post").ByPublishDate.Reverse }}
         <a href="{{ .RelPermalink }}" class="shadow-none hover:shadow-none">
-          {{ partial "text-and-image" (dict "heading" .Title "text" .Description "date" .PublishDate "image" .Params.Image "imageclass" "shadow-lg hover:shadow-none border-r-8 h-64i border-solid border-green-brand" "textclass" "leading-tight mt-1 font-serif text-lg italic" "headingclass" "font-bold leading-none text-5xl font-serif text-brand capitalize") }}
+          {{ partial "text-and-image" (dict "heading" .Title "text" .Description "date" .PublishDate "textclass" "leading-tight mt-1 font-serif text-lg italic" "headingclass" "font-bold leading-none text-5xl font-serif text-brand capitalize") }}
         </a>
       {{ end }}
     </div>
