--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -1,8 +1,8 @@
-<form name="newsletter" netlify class="my-3">
-  <fieldset name="newsletter" action="newsletter-subscribe">
-    <input type="email" name="email" placeholder="Your email" class="w-1/2 px-4 py-2 mb-1 rounded">
-    <input type="text" name="fname" placeholder="Your first name" class="w-1/2 px-4 py-2 mb-1 rounded">
-
-  </fieldset>
-  <button class="bg-transparent hover:bg-brand-light text text-brand-light font-semibold hover:text-brand py-2 px-4 border border-brand-light border-solid hover:border-transparent rounded ml-2" type="submit">Sign Up</button>
+<form method="post" action="https://sendfox.com/form/1ro8d2/1vo5zy" class="sendfox-form" id="1vo5zy" data-async="true" data-recaptcha="true">
+  <p><input type="email" placeholder="Email" name="email" required /></p>
+  <!-- no botz please -->
+  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="a_password" tabindex="-1" value="" autocomplete="off" /></div>
+  <p><button type="submit">Submit</button></p>
 </form>
+<script src="https://sendfox.com/js/form.js"></script>
+        
