--- a/site/layouts/newsletter/single.html
+++ b/site/layouts/newsletter/single.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title></title>
+  <title>{{ .Title }}</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
   <style type="text/css">
     body {font-family: 'Source Sans Pro', Arial, Tahoma, Geneva, sans-serif;}
