update for responsive

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -34,7 +34,7 @@
         </nav>
     </div>
 </header>
-<div class="flex">
+<div class="flex content">
   <div class="p-4">
     <div class="mb-8">
       <h3 class="font-serif text-5xl text-green-brand leading-none">Latest Posts</h3>
