--- a/src/css/brand.css
+++ b/src/css/brand.css
@@ -121,6 +121,7 @@ blockquote {
         -ms-flex-pack: center;
         justify-content: center;
     }
+    .content { flex-direction: column;}
     .image-header {height: 110%;}
 
     header .logo {
