--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="text w-1/2 flex-grow flex-no-shrink ml-4">
 			<h2 class="{{ .headingclass }}">{{.heading}}</h2>
-			<time>{{ .date.Format "Monday, 2 January" }}</time>
+			<time>{{ .date.Format "Monday, January 2nd" }}</time>
 			<p class="{{ .textclass }}">{{.text}}</p>
 		</div>
 	</container>
