--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -10,7 +10,7 @@
 				<p class="{{ .textclass }}">{{.update}}</p>
 			{{ else }}
 				<p class="{{ .textclass }}">{{.text}}</p>
-
+			{{ end }}
 		</div>
 	</container>
 
