--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
-
+<div class="flex" id="{{.Type}}">
 {{ partial "jumbotron" (dict "imageUrl" "/img/7.jpg" "title" "This is where the heading goes" "subtitle" "This is where the subtitle goes") }}
 {{ .Content }}
-
+{{ partial "nav" .}}
+</div>
 {{ end }}
