--- a/site/layouts/section/products.html
+++ b/site/layouts/section/products.html
@@ -25,7 +25,7 @@
     </div>
 
     <!-- Full-width image -->
-    <img src="{{ .Params.full_image }}" alt="" class="db w-100">
+    <img src="https://res.cloudinary.com/airjoshb/image/upload/t_post_size/v1556313746/{{ .Params.full_image }}" alt="" class="db w-100">
 
     {{ partial "table" .Params.pricing }}
   </div>
