add url to product blurb

--- a/site/layouts/partials/blockquote.html
+++ b/site/layouts/partials/blockquote.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="w-3/5 m-auto">
 	<blockquote class="">
 		<p class="">“{{ .quote }}”</p>
 		<cite class="tr db grey-3">{{ .author }}</cite>
