--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -34,6 +34,7 @@
         </nav>
     </div>
 </header>
+<div class="w-full"><a href="/products"><img src="https://res.cloudinary.com/airjoshb/image/upload/v1660692902/Crohn_sDiseaseAIPCookbook_9781638780403_FacebookBusiness_f2jiya.jpg"></a></div>
 <div class="flex content">
   <div class="p-4 sm:w-full md:w-1/3">
     <div class="mb-8">
