--- a/site/layouts/section/products.html
+++ b/site/layouts/section/products.html
@@ -13,7 +13,7 @@
           <div class="w-1/2">
             <img src="https://res.cloudinary.com/airjoshb/image/upload/w_350,f_auto/{{.image}}" alt="" class="center db mb3" style="width: 240px">
             <p>{{.text}}</p>
-            <a href={{.url}} target="_blank">Click to Order</a>
+            <a href="{{.url}}" target="_blank">Click to Order</a>
           </div>
           {{ end }}
         </div>
